# devstats

./: .gitignore  .gitmodules  .golangci.yml  Makefile  OWNERS  README.md  go.mod  go.sum
cmd/annotations/: annotations.go
cmd/api/: api.go
cmd/apiserver/: apiserver.go
cmd/calc_metric/: calc_metric.go
cmd/columns/: columns.go
cmd/devstats/: devstats.go
cmd/get_repos/: get_repos.go
cmd/gha2db/: gha2db.go
cmd/gha2db_sync/: gha2db_sync.go
cmd/gha2es/: gha2es.go
cmd/ghapi2db/: ghapi2db.go
cmd/hide_data/: hide_data.go
cmd/identifier/: identifier.go  main.go
cmd/import_affs/: import_affs.go
cmd/merge_dbs/: merge_dbs.go
cmd/replacer/: replacer.go
cmd/runq/: runq.go
cmd/sqlitedb/: sqlitedb.go
cmd/structure/: structure.go
cmd/sync_issues/: sync_issues.go
cmd/sync_teams/: sync_teams.go
cmd/tags/: tags.go
cmd/vars/: vars.go
cmd/webhook/: webhook.go
cmd/website_data/: website_data.go
configs/dev/: projects.yaml
configs/prod/: projects.yaml
configs/shared/: countries.csv  github_config.yaml  organizations.yaml  skip_dates.yaml
deployments/images/: Dockerfile.api  Dockerfile.api.dev  Dockerfile.api.prod  Dockerfile.full.dev  Dockerfile.full.prod  Dockerfile.grafana  Dockerfile.grafana.dev  Dockerfile.grafana.prod  Dockerfile.minimal.dev  Dockerfile.minimal.prod  Dockerfile.patched-patroni  Dockerfile.patroni.13  Dockerfile.reports  Dockerfile.static.backups  Dockerfile.static.cdf  Dockerfile.static.default  Dockerfile.static.dev  Dockerfile.static.graphql  Dockerfile.static.prod  Dockerfile.tests  Makefile.full  Makefile.minimal  build_images.sh
devel/: webhook.sh
devstats/: .travis.yml  kubernetes.yaml  projects.yaml  tests.yaml
devstats-docker-images/devstats-helm/: deploy_all.sh  projects.yaml
devstats-docker-images/example/: deploy_all.sh
devstats-docker-images/gql/: deploy_all.sh
devstats-docker-images/images/: build_images.sh
devstats-docker-images/k8s/: deploy_all.sh  projects.yaml
devstats-reports/sql/: contributions_with_country.sql  (+2 more)
devstatscode/: Makefile  annotations_test.go  context_test.go  env_test.go  go.mod  go.sum  map_test.go  time_test.go
docs/: book.toml
tools/affiliations/crawler/: Cargo.toml
tools/affiliations/crawler/src/: auth.rs  crawler.rs  departments.rs  lark.rs  lib.rs  resp.rs  users.rs
tools/affiliations/importer/: Cargo.toml
tools/affiliations/importer/src/: lib.rs  main.rs  models.rs  schema.rs
(+722 files in other folders)
