[package]
name = "crawler"
version = "0.1.0"
authors = ["hi-rustin <rustin.liu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.30"
log = "0.4"
pretty_env_logger = "0.3"
