[package]
name = "importer"
version = "0.1.0"
authors = ["hi-rustin <rustin.liu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3"
chrono = "0.4"

[dependencies.crawler]
version = "~0.1.0"
path = "../crawler"